# rail

./: .gitignore  Cargo.toml  README.md  settings.example.json
qml/: main_ui.qml
src/: main.rs
src/rail_imap/: connection.rs  folder.rs  mod.rs  server.rs
